# friendzone

./: .pdm.toml  Dockerfile  HISTORY.md  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2022-09-25_create_users_table.py
src/: Dockerfile  database.py  main.py
src/models/: users_models.py
