[project]
name = ""
version = ""
description = ""
authors = [
    {name = "BeeeeeMo", email = "hi@beeeeemo.dev"},
]
dependencies = [
    "fastapi>=0.85.0",
    "uvicorn[standard]>=0.18.3",
    "SQLAlchemy>=1.4.41",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.dev-dependencies]
lint = [
    "black",
]
tools = [
    "alembic",
]
