[project]
name = ""
version = ""
description = ""
authors = [
    {name = "BeeeeeMo", email = "hi@beeeeemo.dev"},
]
dependencies = [
    "fastapi>=0.85.0",
    "sqlalchemy>=1.4.41",
    "alembic>=1.8.1",
    "psycopg2>=2.9.3",
    "uvicorn[standard]>=0.18.3",
]
requires-python = ">=3.10"
license = {text = "unlicense"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
lint = [
    "black",
]
